--- a/static/solver/index.html
+++ b/static/solver/index.html
@@ -3,17 +3,16 @@
 
 {% block content %}
 <div class="container">
-    <h1 class="text-center">Handwritten Digit Recognition</h1>
+    <h1 class="text-center mt-4 mb-5">Handwritten Digit Recognition</h1>
     <p class="text-center">Draw your digit</p>
-    <div class="d-md-flex justify-content-md-center">
-    <canvas width="280" height="280" style="border:8px solid; border-radius: 5px; cursor: crosshair;"></canvas>
+    <div class="d-flex justify-content-center">
+    <canvas id="canvas" class="mb-4" style="border:8px solid; border-radius: 5px; cursor: crosshair;"></canvas>
 </div>
-    <div class="d-grid gap-2 d-md-flex justify-content-md-center">
-        <button type="button" class="btn btn-dark">CLEAR</button>
-        <button type="button" class="btn btn-dark">PREDICT</button>
+    <div class="d-grid gap-2 d-flex justify-content-center mb-5">
+        <button onclick="clearCanvas()" type="button" class="btn btn-dark" style="width: 100px;">CLEAR</button>
+        <button id="predict" type="button" class="btn btn-dark" style="width: 100px;">PREDICT</button>
   </div>
   <p class="text-center">Predicted Output:</p>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js" integrity="sha384-Xe+8cL9oJa6tN/veChSP7q+mnSPaj5Bcu9mPX5F5xIGE0DVittaqT5lorf0EI7Vk" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js" integrity="sha384-kjU+l4N0Yf4ZOJErLsIcvOU2qSb74wXpOhqTvwVx3OElZRweTnQ6d31fXEoRD1Jy" crossorigin="anonymous"></script>
+
 {% endblock %}
