--- a/static/solver/index.html
+++ b/static/solver/index.html
@@ -1,16 +1,42 @@
-{% extends 'solver/base.html' %}
-
-
-{% block content %}
+{% extends 'solver/base.html' %} {% block content %}
 <div class="container">
-    <h1 class="text-center mt-4 mb-5">Handwritten Digit Recognition</h1>
-    <p class="text-center">Draw your digit</p>
-    <div class="d-flex justify-content-center">
-    <canvas id="canvas" class="mb-4" style="border:8px solid; border-radius: 5px; cursor: crosshair;"></canvas>
-</div>
-    <div class="d-grid gap-2 d-flex justify-content-center mb-5">
-        <button onclick="clearCanvas()" type="button" class="btn btn-dark" style="width: 100px;">CLEAR</button>
-        <button id="predict" type="button" class="btn btn-dark" style="width: 100px;">PREDICT</button>
+  <h1 class="text-center mt-4 mb-5">Handwritten Digit Recognition</h1>
+  <p class="text-center">Draw your digit</p>
+  <div class="d-flex justify-content-center">
+    <canvas
+      id="canvas"
+      class="mb-4"
+      style="border: 8px solid; border-radius: 5px; cursor: crosshair"
+    ></canvas>
+  </div>
+  <div class="d-grid gap-2 d-flex justify-content-center mb-5">
+    <button
+      onclick="clearCanvas()"
+      type="button"
+      class="btn btn-dark"
+      style="width: 100px"
+    >
+      CLEAR
+    </button>
+    <button
+      onclick="downloadCanvas()"
+      id="download"
+      type="button"
+      class="btn btn-dark"
+      style="width: 130px"
+    >
+      DOWNLOAD
+    </button>
+  </div>
+  <div class="d-flex justify-content-center">
+    <form method="post" enctype="multipart/form-data">
+      {% csrf_token %} {{form.as_p}}
+      <div class="d-flex justify-content-center">
+        <button type="submit" class="btn btn-dark" style="width: 100px">
+          SUBMIT
+        </button>
+      </div>
+    </form>
   </div>
   <p class="text-center">Predicted Output:</p>
 </div>
