✨ Predicted number output to view.

--- a/static/solver/result.html
+++ b/static/solver/result.html
@@ -13,7 +13,7 @@
         line-height: 100px;
       "
     >
-      4
+      {{digit}}
     </span>
   </div>
   <div class="d-flex justify-content-center">
